progreso en html y css

--- a/index.html
+++ b/index.html
@@ -13,20 +13,18 @@
     <title>TO DO LIST</title>
 </head>
 <body>
-    <div id="container">
-        <div id="profile">
-            <h2 id="date"></h2>
+    <div class="container">
+        <div class="profile">
+            <h2 id="date">jueves </h3>
             <h1>Welcome programmer</h1>
             <span>We will help you meet your goals!!✨</span>
         </div>
-        <div id="addHomework">
-            <h3>Project Tasks</h3>
+        <div class="addHomework">
             <p>
-               <label for="newHomework">New homework:</label>
-               <input type="text" id="newHomework" name="task">
+               <input type="text" id="newHomework" name="task" placeholder="Write a task">
                <i id="enter" class="fa-solid fa-circle-plus"></i>
             </p>
-            <p class="Date">
+            <p>
                 <label for="date"></label>
                 <input type="date" id="date" name="date">
             </p>
@@ -38,9 +36,9 @@
                 </select>     
             </p> 
         </div>
-        <div id="homework">
+        <div class="homework">
             <h3>These are your tasks</h3>
-            <ul id="list">
+            <ul>
                 <li> 
                     <i id="0" data="check" class="far fa-circle co" ></i>
                     <p class="text">pasear al perro</p>
