--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </div>
         <div class="homework">
             <h3>These are your tasks</h3>
-            <ul>
+            <ul id="list">
                 <li> 
                     <i id="0" data="check" class="far fa-circle co" ></i>
                     <p class="text">pasear al perro</p>
