--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <div class="container">
         <div class="profile">
-            <h2 id="date">jueves </h3>
+            <h2 id="dateHeader">jueves </h3>
             <h1>Welcome programmer</h1>
             <span>We will help you meet your goals!!✨</span>
         </div>
@@ -24,7 +24,7 @@
                <input type="text" id="newHomework" name="task" placeholder="Write a task">
                <i id="enter" class="fa-solid fa-circle-plus"></i>
             </p>
-            <p>
+            <p class="dateHomework">
                 <label for="date"></label>
                 <input type="date" id="date" name="date">
             </p>
