--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <div class="container">
         <div class="profile">
-            <h2 id="dateHeader">jueves </h3>
+            <h2 id="dateHeader"></h3>
             <h1>Welcome programmer</h1>
             <span>We will help you meet your goals!!✨</span>
         </div>
@@ -39,11 +39,11 @@
         <div class="homework">
             <h3>These are your tasks</h3>
             <ul id="list">
-                <li> 
+                <!-- <li> 
                     <i id="0" data="check" class="far fa-circle co" ></i>
                     <p class="text">pasear al perro</p>
                     <i data="remove" id="0" class="fa-solid fa-trash-can"></i> 
-                </li>
+                </li> -->
             </ul>
         </div>
     </div>
